[package]
name = "solana_mempool_sniper"
version = "0.2.0"
edition = "2021"
description = "A high-performance Solana mempool monitoring bot for real-time transaction analysis and DeFi opportunity detection"
repository = "https://github.com/yourusername/solana-mempool-sniper"
license = "MIT"
keywords = ["solana", "blockchain", "mempool", "sniper", "trading", "defi", "dex", "tokens"]
categories = ["blockchain", "cryptography::cryptocurrency"]
authors = ["Your Name <your.email@example>"]
readme = "README.md"
documentation = "https://docs.rs/solana_mempool_sniper"

[lib]
name = "solana_mempool_sniper"
path = "src/lib.rs"

[[bin]]
name = "solana-mempool-sniper"
path = "src/main.rs"

[dependencies]
# Solana
solana-client = "1.17.34"
solana-sdk = "1.17.34"
solana-transaction-status = "1.17.34"
solana-program-test = "1.17.34"
solana-remote-wallet = "1.17.34"
tokio-stream = "0.1"
shellexpand = "2.1"
lazy_static = "1.4"


# SPL Token
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

# Encoding/Decoding
base64 = "0.21"
bs58 = "0.5"
hex = "0.4"

# Hashing
sha2 = "0.10"
sha3 = "0.10"
once_cell = "1.21.3"

# Async
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }


# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
# Logging
log = "0.4"
env_logger = { version = "0.10", features = ["auto-color"], optional = true }


# Networking
url = { version = "2.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }

# Colored output for examples
colored = { version = "2.0", optional = true }
dotenv = "0.15.0"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:toml", "dep:env_logger"]
# Enable this for colored output in examples
examples = ["colored"]

[workspace]
# Add workspace members here if needed
resolver = "2"

[dev-dependencies]
solana-program-test = "1.17"
solana-remote-wallet = "1.17"
assert_matches = "1.5"
chrono = "0.4"
colored = "2.0"

